# Multiframe-Face-Super-Resolution

./: .gitignore  client.sh  server.sh  testServer.sh
client/: package-lock.json  package.json  webpack.config.js
client/src/: index.html  index.js  styles.css
client/src/js/networking/: socket.js
client/src/js/three_components/: face_mask.js  scene_manager.js  video_bg.js
server/Boost/: CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.h  main.cpp  test.cpp
server/python/: app.py  compMasks.ipynb  featureDetection.ipynb
server/python/helperClasses/: ImageProcessor.py  interpolator.py
server/python/videos/: videoResize.py
testing/: ImageParser.py  SR2D.py  face.py  faceMapGen.py  faceRender.py  main.py  pyrenderTest.py  test.py
